DB적용 / 팁게시판 제작 이미지 출력 부분 문제 해결 필요

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
     <div class="dropdown">
         <button class="dropbtn">공략</button>
         <div class="nav-content">
-            <a href="#generalStrategy">공통 공략</a>
+            <a href="/tip">공통 공략</a>
             <div class="dropdown">
                 <button class="dropbtn">팀별 공략</button>
                 <div class="nav-content">
@@ -68,7 +68,7 @@
 </nav>
 
 <section>
-    <h2>최신 글 목록</h2>
+    <h2>공지 사항</h2>
     <!-- 여기에 최신 글 목록이나 게시물 리스트를 나타내는 내용을 추가하세요 -->
 </section>
 
